k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mutating-webhook-akash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mutating-webhook
  template:
    metadata:
      labels:
        app: mutating-webhook
    spec:
      containers:
      - name: mutating-webhook
        image: docker-registry/validation-webhook-akash:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: certs-volume
          readOnly: true
          mountPath: "/certs"
      volumes:
      - name: certs-volume
        secret:
          secretName: admission-tls
