k8s/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
webhooks:
- name: mutating-webhook.default.svc
  matchPolicy: Equivalent
  admissionReviewVersions: ["v1"]
  sideEffects: None
  rules:
  - operations: ["CREATE"]
    apiGroups: ["apps"]
    apiVersions: ["v1"]
    resources: ["deployments", "statefulsets", "daemonsets"]
    scope: "Namespaced"
  failurePolicy: Ignore
  timeoutSeconds: 20
  clientConfig:
    service:
      namespace: default
      name: mutating-webhook
      path: /mutate
      port: 5000
    caBundle:
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMrRENDQWVDZ0F3SUJBZ0lKQUxqenhqR25rODNrTUEwR0NTcUdTSWIzRFFFQkN3VUFNQ1V4Q3pBSkJnTlYKQkFZVEFrUkZNUll3RkFZRFZRUUREQTExYm1SbGNuTjBZVzVrTG1GcE1CNFhEVEl6TURZeE16RTBNelkwT0ZvWApEVEkyTURRd01qRTBNelkwT0Zvd0pURUxNQWtHQTFVRUJoTUNSRVV4RmpBVUJnTlZCQU1NRFhWdVpHVnljM1JoCmJtUXVZV2t3Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQzcwSXh6a1VzcUhaSlAKRWJzMEM3bmtsbjkzUjJ4LzNVYTNJcWlISnRIeDl0blBOL1NtOC85VHlEcTJOU3dGZi9UbU1yZjUyZWJGTWJOagpMNUJ6Rk9wQnQvdmVVTG5XOX [...]
